--- a/owllook/templates/md/admin_books.html
+++ b/owllook/templates/md/admin_books.html
@@ -88,6 +88,7 @@
         <center style="height: 50px;line-height: 50px">暂无书架数据</center>
         {% endif %}
     </div>
+    {% include "is_login.html" %}
 </div>
 {% endblock %}
 {% block script %}
