--- a/owllook/templates/md/admin_setting.html
+++ b/owllook/templates/md/admin_setting.html
@@ -111,6 +111,7 @@
                 <i class="mdui-icon material-icons">access_time</i></div>
         </div>
     </div>
+    {% include "is_login.html" %}
 </div>
 {% endblock %}
 {% block script %}
