--- a/owllook/templates/md/noti_book.html
+++ b/owllook/templates/md/noti_book.html
@@ -81,20 +81,20 @@
     {% endif %}
 
     <!--<div class="mdui-panel mdui-panel-fluid" id="panel">-->
-        <!--{%for item in author_list%}-->
-        <!--<div class="mdui-panel-item">-->
-            <!--<div class="mdui-panel-item-header">-->
-                <!--<div class="mdui-panel-item-title">作者名</div>-->
-                <!--<div class="mdui-panel-item-summary">{{item.author_name}}</div>-->
-                <!--<i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>-->
-            <!--</div>-->
-            <!--<div class="mdui-panel-item-body">-->
-                <!--<p class="mdui-text-color-black-icon">书籍</p>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--{%endfor%}-->
+    <!--{%for item in author_list%}-->
+    <!--<div class="mdui-panel-item">-->
+    <!--<div class="mdui-panel-item-header">-->
+    <!--<div class="mdui-panel-item-title">作者名</div>-->
+    <!--<div class="mdui-panel-item-summary">{{item.author_name}}</div>-->
+    <!--<i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>-->
     <!--</div>-->
-
+    <!--<div class="mdui-panel-item-body">-->
+    <!--<p class="mdui-text-color-black-icon">书籍</p>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--{%endfor%}-->
+    <!--</div>-->
+    {% include "is_login.html" %}
 </div>
 {% endblock %}
 {% block script %}
