--- a/owllook/templates/md/similar_user.html
+++ b/owllook/templates/md/similar_user.html
@@ -80,6 +80,7 @@
         <center style="height: 50px;line-height: 50px">暂无相似书友</center>
         {% endif %}
     </div>
+    {% include "is_login.html" %}
 </div>
 {% endblock %}
 {% block script %}
