榜单样式颜色修改

--- a/owllook/templates/md/index.html
+++ b/owllook/templates/md/index.html
@@ -73,7 +73,7 @@
         </div>
         {%for each in first_type%}
         <div class="mdui-chip">
-            <span class="mdui-chip-title"><a href="/md/qidian?type={{each}}">{{each}}</a></span>
+            <span class="mdui-chip-title mdui-text-color-red"><a href="/md/qidian?type={{each}}">{{each}}</a></span>
         </div>
         {%endfor%}
 
