--- a/owllook/templates/md/main.html
+++ b/owllook/templates/md/main.html
@@ -35,7 +35,7 @@
 <body class="mdui-appbar-with-toolbar mdui-theme-primary-indigo mdui-theme-accent-pink">
 {% block content %}{% endblock %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/0.2.1/js/mdui.min.js"></script>
 <script src="/md/static/md/js/index.js"></script>
 <script src="/md/static/md/js/theme.js"></script>
